--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} — An efficient chemistry IO library{% endblock %}
+
 {% block body %}
 <div class="jumbotron">
     <div class="container">
