Make the word cloud centered

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -44,7 +44,7 @@
             formats.</p>
         </div>
         <div class="col-lg-4">
-            <img src="{% static '/static/images/words.png' %}" alt="Words cloud" class="img-responsive"/>
+            <img src="{% static '/static/images/words.png' %}" alt="Word cloud" class="img-responsive" style="margin: 0 auto;"/>
         </div>
         <div class="col-lg-4">
             <h2><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
