Use octoicons font for icons

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,13 +17,13 @@
         <div class="input-group-btn text-center">
             <a href="http://github.com/chemfiles/chemfiles/releases/">
                 <button class="btn-success" type="button" name="Download">
-                    <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+                    <span class="mega-octicon octicon-cloud-download" aria-hidden="true"></span>
                     Download
                 </button>
             </a>
             <a href="http://chemfiles.readthedocs.org/">
                 <button class="btn-primary" type="button" name="Documentation">
-                    <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+                    <span class="mega-octicon octicon-flame" aria-hidden="true"></span>
                     Documentation
                 </button>
             </a>
@@ -34,7 +34,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-4">
-            <h2><span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+            <h2><span class="mega-octicon octicon-file-code" aria-hidden="true"></span>
                 Format agnostic
             </h2>
             <p>Chemfiles provides a unique interface for all supported file formats. Read
@@ -47,7 +47,7 @@
             <img src="{% static '/static/images/words.png' %}" alt="Word cloud" class="img-responsive" style="margin: 0 auto;"/>
         </div>
         <div class="col-lg-4">
-            <h2><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+            <h2><span class="mega-octicon octicon-check" aria-hidden="true"></span>
                 Easy to use
             </h2>
 
@@ -59,7 +59,7 @@
     </div>
     <div class="row">
         <div class="col-lg-4">
-            <h2><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+            <h2><span class="mega-octicon octicon-globe" aria-hidden="true"></span>
                 Multiple languages
             </h2>
             <p>Chemfiles is written in C++, but you can use it with all the major
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <h2><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            <h2><span class="mega-octicon octicon-organization" aria-hidden="true"></span>
                 Who is it for?
             </h2>
 
@@ -120,7 +120,7 @@
             repository.</p>
         </div>
         <div class="col-lg-4">
-            <h2><img src="{% static '/static/images/github.png' %}" alt="Github icon"/>
+            <h2><span class="mega-octicon octicon-mark-github" aria-hidden="true"></span>
                 Open-source
             </h2>
             <p>Chemfiles is open-source under the <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL-v2</a>
