Link to the doc and not to the code

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -67,19 +67,19 @@
 
             <div class="row">
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/chemfiles" title="C++">
+                    <a href="http://chemfiles.readthedocs.org/" title="C++">
                         <img src="{% static '/static/images/logo-cxx.png' %}" alt="C++ logo"/>
                     </a>
                     <p>C++</p>
                 </div>
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/chemfiles" title="C">
+                    <a href="http://chemfiles.readthedocs.org/en/latest/c-api.html" title="C">
                         <img src="{% static '/static/images/logo-c.png' %}" alt="C logo"/>
                     </a>
                     <p>C</p>
                 </div>
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/chemfiles.f03" title="Fortran">
+                    <a href="http://chemfiles.readthedocs.org/projects/fortran/en/latest/" title="Fortran">
                         <img src="{% static '/static/images/logo-fortran.png' %}" alt="Fortran logo" />
                     </a>
                     <p>Fortran</p>
@@ -87,19 +87,19 @@
             </div>
             <div class="row">
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/chemfiles.py" title="Python">
+                    <a href="http://chemfiles.readthedocs.org/projects/python/en/latest/" title="Python">
                         <img src="{% static '/static/images/logo-python.png' %}" alt="Python logo" />
                     </a>
                     <p>Python 2 &amp; 3</p>
                 </div>
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/Chemfiles.jl" title="Julia">
+                    <a href="http://chemfiles.readthedocs.org/projects/julia/en/latest/" title="Julia">
                         <img src="{% static '/static/images/logo-julia.png' %}" alt="Julia logo" />
                     </a>
                     <p>Julia</p>
                 </div>
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://github.com/chemfiles/chemfiles.rs" title="Rust">
+                    <a href="http://chemfiles.github.io/chemfiles.rs/chemfiles" title="Rust">
                         <img src="{% static '/static/images/logo-rust.png' %}" alt="Rust logo" />
                     </a>
                     <p>Rust</p>
