Replace the "how" by a "features" section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -107,17 +107,17 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <h2><span class="mega-octicon octicon-organization" aria-hidden="true"></span>
-                Who is it for?
+            <h2><span class="mega-octicon octicon-gear" aria-hidden="true"></span>
+                Principal features
             </h2>
-
-            <p>Chemfiles is a software library built for scientists who write their own
-            analysis or simulation code.</p>
-
-            <p>It does not provide analysis code, but if you are insterested you can find
-            implementation of some simple algorithms in a ready-to-use command line program
-            using Chemfiles at the <a href="https://github.com/chemfiles/cfiles">cfiles</a>
-            repository.</p>
+            <ul>
+                <li>VMD style atom selection language;</li>
+                <li>Automatic file type recognition;</li>
+                <li>Support a varying number of atoms;</li>
+                <li>Orthorombic and tricliclinic periodic boundary conditions;</li>
+                <li>Use a custom unit cell or topology at runtime;</li>
+                <li>And <a href="http://chemfiles.readthedocs.org/">others</a> ...</li>
+            </ul>
         </div>
         <div class="col-lg-4">
             <h2><span class="mega-octicon octicon-mark-github" aria-hidden="true"></span>
