Improve the header block

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block title %} — An efficient chemistry IO library{% endblock %}
 
 {% block body %}
@@ -8,11 +7,10 @@
         <img src="{% static '/static/images/chemfiles.png' %}" alt="Chemfiles logo" class="img-responsive pull-right"/>
 
         <h1>Chemfiles</h1>
-        <h2>An efficient library for reading and writing chemistry files</h2>
-        <br />
-        <p>Write code once, use it for any file format! Chemfiles provides a unified
-        interface for accessing and writing data in computational chemistry files
-        (trajectories, configurations and topologies).</p>
+        <h2>A library for reading and writing trajectory files</h2>
+        <p>Chemfiles provides a <strong>simple</strong> and <strong>unified</strong>
+            interface for reading and writing computational chemistry
+            files: trajectories, configurations, and topologies.</p>
 
         <div class="input-group-btn text-center">
             <a href="http://github.com/chemfiles/chemfiles/releases/">
