Copy and paste is bad

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -258,7 +258,7 @@
                 # Do awesome science here with the positions
 
                 if frame.has_velocities():
-                    auto velocities = frame.velocities()
+                    velocities = frame.velocities()
                     # If the file contains information about the
                     # velocities, you will find them here.
             {% endfilter %}
