Use Github hosted documentation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,7 @@
                     Download
                 </button>
             </a>
-            <a href="http://chemfiles.readthedocs.org/">
+            <a href="chemfiles/index.html">
                 <button class="btn-primary" type="button" name="Documentation">
                     <span class="mega-octicon octicon-flame" aria-hidden="true"></span>
                     Documentation
@@ -36,7 +36,7 @@
                 Format agnostic
             </h2>
             <p>Chemfiles provides a unique interface for all supported file formats. Read
-            XYZ, PDB, NetCDF, TRJ and <a href="http://chemfiles.readthedocs.org/en/latest/formats.html#list-of-supported-formats">
+            XYZ, PDB, NetCDF, TRJ and <a href="chemfiles/latest/formats.html#list-of-supported-formats">
             other formats</a> with the exact same code.</p>
             <p>Chemfiles supports both text (XYZ, PDB, …) and binary (GROMACS, NetCDF, …)
             formats.</p>
@@ -52,7 +52,7 @@
             <p>Chemfiles is built in an object-oriented fashion, and the public interface
             consists of 5 classes only.</p>
             <p>The interface focuses on simplicity, and has extensive
-            <a href="http://chemfiles.readthedocs.org/en/latest/">documentation</a>.</p>
+            <a href="chemfiles/latest/index.html">documentation</a>.</p>
         </div>
     </div>
     <div class="row">
@@ -65,13 +65,13 @@
 
             <div class="row">
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://chemfiles.readthedocs.org/" title="C++">
+                    <a href="chemfiles/latest/index.html" title="C++">
                         <img src="{% static '/static/images/logo-cxx.png' %}" alt="C++ logo"/>
                     </a>
                     <p>C++</p>
                 </div>
                 <div class="col-xs-4 text-center images-table">
-                    <a href="http://chemfiles.readthedocs.org/en/latest/c-api.html" title="C">
+                    <a href="chemfiles/latest/capi.html" title="C">
                         <img src="{% static '/static/images/logo-c.png' %}" alt="C logo"/>
                     </a>
                     <p>C</p>
@@ -114,7 +114,7 @@
                 <li>Support a varying number of atoms;</li>
                 <li>Orthorombic and tricliclinic periodic boundary conditions;</li>
                 <li>Use a custom unit cell or topology at runtime;</li>
-                <li>And <a href="http://chemfiles.readthedocs.org/">others</a> ...</li>
+                <li>And <a href="chemfiles/latest">others</a> ...</li>
             </ul>
         </div>
         <div class="col-lg-4">
