--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,16 +15,16 @@
         <p>Chemfiles provides a <strong>simple</strong> and <strong>unified</strong>
             interface for reading and writing computational chemistry
             files: trajectories, configurations, and topologies.</p>
-
+        <br/>
         <div class="input-group-btn text-center">
             <a href="http://github.com/chemfiles/chemfiles/releases/">
-                <button class="btn-success" type="button" name="Download">
+                <button class="btn-success flat-btn" type="button" name="Download">
                     <span class="mega-octicon octicon-cloud-download" aria-hidden="true"></span>
                     Download
                 </button>
             </a>
             <a href="chemfiles/index.html">
-                <button class="btn-primary" type="button" name="Documentation">
+                <button class="btn-primary flat-btn" type="button" name="Documentation">
                     <span class="mega-octicon octicon-flame" aria-hidden="true"></span>
                     Documentation
                 </button>
